Fixes #131: header items broken on IE11
When using the shorthand property on .header-item
the flex-basis is set to 0px in IE11

--- a/bulma/layout/header.sass
+++ b/bulma/layout/header.sass
@@ -36,7 +36,7 @@
     max-height: 24px
   a
     color: $text
-    flex: 1
+    flex-grow: 1
     &:hover
       color: $link-hover
     &.is-active
@@ -143,4 +143,3 @@
     &:hover,
     &.is-active
       border-bottom-width: 2px
-
