--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3990,9 +3990,9 @@ a.menu-block:hover {
 .header-item a {
   color: #69707a;
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .header-item a:hover {
